--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,16 @@
             <version>18</version>
         </dependency>
 
+
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.26</version>
+        </dependency>
+
+
+
     </dependencies>
     <build>
         <plugins>
